# SmarterThermostat

./: CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/smarter_thermostat/: __init__.py  calibration.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  strings.json  switch.py
docs/superpowers/plans/: 2026-04-21-smarter-thermostat.md
docs/superpowers/specs/: 2026-04-21-smarter-thermostat-design.md
tests/: conftest.py  test_calibration.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_number.py  test_switch.py
